--- a/package.json
+++ b/package.json
@@ -60,15 +60,15 @@
     "test:once": "cross-env CI=true npm test",
     "build:src": "babel-node src/tx/jscodeshift",
     "precommit:src": "npm run build:src && npm run dtslint",
-    "commit:src": "git add -A && git commit -m 'chore(src/components): compile from src/macros with `babel`'",
+    "commit:src": "git add -A && git commit -m \"chore(src/components): compile from src/macros with `babel`\"",
     "prebuild:lib": "rimraf lib",
     "build:lib": "cross-env NODE_ENV=production babel src --out-dir lib --ignore macros,tx,spec.js",
     "precommit:lib": "npm run build:lib",
-    "commit:lib": "git add -A && git commit -m 'chore(lib): compile from src with `babel`'",
+    "commit:lib": "git add -A && git commit -m \"chore(lib): compile from src with `babel`\"",
     "precommit:docs": "npm run styleguide:build",
-    "commit:docs": "git add -A && git commit -m 'docs: compile from src with `styleguidist`'",
+    "commit:docs": "git add -A && git commit -m \"docs: compile from src with `styleguidist`\"",
     "prerelease": "npm run commit:src && npm run commit:lib && npm run commit:docs",
-    "release": "standard-version -m 'chore(release): %s \n\n* CHANGELOG: https://github.com/tomchentw/react-google-maps/blob/v%s/CHANGELOG.md'"
+    "release": "standard-version -m \"chore(release): %s \n\n* CHANGELOG: https://github.com/tomchentw/react-google-maps/blob/v%s/CHANGELOG.md\""
   },
   "lint-staged": {
     "*.{js,jsx,json,css}": [
