--- a/package.json
+++ b/package.json
@@ -108,55 +108,56 @@
   },
   "types": "types",
   "dependencies": {
-    "babel-runtime": "^6.11.6",
+    "babel-runtime": "^6.26.0",
     "can-use-dom": "^0.1.0",
     "google-maps-infobox": "^2.0.0",
-    "invariant": "^2.2.1",
-    "lodash": "^4.16.2",
+    "invariant": "^2.2.4",
+    "lodash": "^4.17.20",
     "marker-clusterer-plus": "^2.1.4",
-    "markerwithlabel": "^2.0.1",
-    "prop-types": "^15.5.8",
-    "recompose": "^0.26.0",
-    "scriptjs": "^2.5.8",
-    "warning": "^3.0.0"
+    "markerwithlabel": "^2.0.2",
+    "prop-types": "^15.7.2",
+    "recompose": "^0.30.0",
+    "scriptjs": "^2.5.9",
+    "warning": "^4.0.3"
   },
   "peerDependencies": {
-    "@types/googlemaps": "^3.0.0",
-    "@types/markerclustererplus": "^2.1.29",
-    "@types/react": "^15.0.0 || ^16.0.0",
-    "react": "^15.0.0 || ^16.0.0",
-    "react-dom": "^15.0.0 || ^16.0.0"
+    "@types/googlemaps": "^3.40.0",
+    "@types/markerclustererplus": "^2.1.33",
+    "@types/react": "^16.9.52",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
   },
   "devDependencies": {
-    "@types/googlemaps": "^3.29.2",
+    "@types/googlemaps": "^3.40.0",
     "@types/markerclustererplus": "^2.1.33",
-    "@types/react": "^16.0.22",
+    "@types/react": "^16.9.52",
     "babel-cli": "^6.26.0",
-    "babel-plugin-lodash": "^3.3.2",
+    "babel-plugin-lodash": "^3.3.4",
     "babel-plugin-transform-class-properties": "^6.24.1",
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-plugin-transform-runtime": "^6.23.0",
-    "babel-preset-env": "^1.6.1",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "cheerio": "^1.0.0-rc.2",
-    "cross-env": "^5.1.1",
-    "dtslint": "github:Microsoft/dtslint#production",
-    "eslint": "^4.11.0",
-    "glob": "^7.1.2",
-    "husky": "^0.14.3",
-    "isomorphic-fetch": "^2.2.1",
-    "jscodeshift": "^0.3.32",
-    "lint-staged": "^6.0.0",
-    "make-fetch-happen": "^2.6.0",
-    "mkdirp": "^0.5.1",
-    "prettier": "^1.8.2",
-    "react": "^16.1.1",
-    "react-dom": "^16.1.1",
-    "react-icons": "^2.2.7",
-    "react-scripts": "^1.0.17",
-    "react-styleguidist": "^6.0.33",
-    "rimraf": "^2.6.2",
-    "standard-version": "^4.2.0",
-    "to-markdown": "^3.1.0"
+    "cheerio": "1.0.0-rc.3",
+    "cross-env": "^7.0.2",
+    "dtslint": "^4.0.4",
+    "eslint": "^7.11.0",
+    "glob": "^7.1.6",
+    "husky": "^4.3.0",
+    "isomorphic-fetch": "^3.0.0",
+    "jscodeshift": "^0.11.0",
+    "lint-staged": "^10.4.0",
+    "make-fetch-happen": "^8.0.10",
+    "mkdirp": "^1.0.4",
+    "prettier": "^2.1.2",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-icons": "^3.11.0",
+    "react-scripts": "^3.4.3",
+    "react-styleguidist": "^11.1.0",
+    "rimraf": "^3.0.2",
+    "standard-version": "^9.0.0",
+    "to-markdown": "^3.1.1",
+    "typescript": "^3.9.7"
   }
 }
