--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "commit:lib": "git add -A && git commit -m \"chore(lib): compile from src with `babel`\"",
     "precommit:docs": "npm run styleguide:build",
     "commit:docs": "git add -A && git commit -m \"docs: compile from src with `styleguidist`\"",
-    "prerelease": "npm run commit:src && npm run commit:lib && npm run commit:docs",
+    "prerelease": "npm run commit:src && npm run commit:lib",
     "release": "standard-version -m \"chore(release): %s \n\n* CHANGELOG: https://github.com/tomchentw/react-google-maps/blob/v%s/CHANGELOG.md\""
   },
   "lint-staged": {
