--- a/package.json
+++ b/package.json
@@ -77,7 +77,12 @@
   },
   "babel": {
     "plugins": [
-      ["@babel/plugin-proposal-class-properties", { "loose": true }],
+      [
+        "@babel/plugin-proposal-class-properties",
+        {
+          "loose": true
+        }
+      ],
       "@babel/plugin-transform-runtime",
       "@babel/plugin-transform-spread"
     ],
